--- a/sahur_poc/sahur/sahur-batch/Dockerfile
+++ b/sahur_poc/sahur/sahur-batch/Dockerfile
@@ -5,12 +5,8 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --upgrade pip && pip install -r requirements.txt
 
-# sahur-core editable install
-COPY ../sahur-core ../sahur-core
-RUN pip install -e ../sahur-core
-
-COPY . .
+COPY sahur_batch/ ./sahur_batch
 
 EXPOSE 8010
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8010", "--reload"]
+CMD ["uvicorn", "sahur_batch.main:app", "--host", "0.0.0.0", "--port", "8010", "--reload"]
