--- a/sahur_poc/sahur/sahur-core/pyproject.toml
+++ b/sahur_poc/sahur/sahur-core/pyproject.toml
@@ -2,6 +2,9 @@
 requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 
+[tool.setuptools.packages.find]
+where = ["sahur_core"]
+
 [project]
 name = "sahur-core"
 version = "0.1.0"
