--- a/sahur_poc/sahur/sahur-web/Dockerfile
+++ b/sahur_poc/sahur/sahur-web/Dockerfile
@@ -3,10 +3,14 @@ FROM node:20-alpine
 WORKDIR /app
 
 COPY package.json package-lock.json* ./
-RUN npm install
+RUN npm install --production=false
 
 COPY . .
 
+RUN npm run build
+
 EXPOSE 3000
 
-CMD ["npm", "run", "dev"]
+ENV PATH /app/node_modules/.bin:$PATH
+
+CMD ["npm", "run", "start"]
